# immulator

./: .gitignore  CMakeLists.txt  README.md
src/: germline.cpp  germline.h  germline_configuration.cpp  germline_configuration.h  germline_factory.cpp  germline_factory.h  immutils.h  main.cpp
